@@ -118,7 +118,7 @@ WriteMakefile(
     clean => { FILES => join " ",
 		"nytprof demo-out",
 		map { ("t/$_", "xt/$_") }
-			qw(nytprof_t.out nytprof.out *.outdir test*.*.new auto)
+			qw(nytprof*.out *.outdir test*.*.new auto)
     },
     dist  => {
         DIST_DEFAULT => 'clean distcheck disttest tardist',
